turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: unclosed character literal
    case 'novirage' => avance()
                  ^Turmite:31: error: unclosed character literal
    case 'left' => gauche()
              ^Turmite:32: error: unclosed character literal
    case 'demi' => retourne()
              ^Turmite:33: error: unclosed character literal
    case 'right' => droite()
               ^Turmite:34: error: unclosed character literal
    case 'stop' => useless=0
              ^Turmite:30: error: '=>' expected but something found.
    case 'novirage' => avance()
                  ^